# genetic-algorithm

./: .gitignore  CMakeLists.txt  README.md  genetic_algorithm.cpp  genetic_algorithm.h  repomix-output.txt  test.txt
2PX_GA_Solution/: GA Solution - GA1.txt  GA Solution - GA10.txt  GA Solution - GA11.txt  GA Solution - GA12.txt  GA Solution - GA13.txt  GA Solution - GA14.txt  GA Solution - GA15.txt  GA Solution - GA16.txt  GA Solution - GA17.txt  GA Solution - GA18.txt  GA Solution - GA19.txt  GA Solution - GA2.txt  GA Solution - GA20.txt  GA Solution - GA3.txt  GA Solution - GA4.txt  GA Solution - GA5.txt  GA Solution - GA6.txt  GA Solution - GA7.txt  GA Solution - GA8.txt  GA Solution - GA9.txt
2PX_Simulation/: Simulation - GA1.txt  Simulation - GA10.txt  Simulation - GA11.txt  Simulation - GA12.txt  Simulation - GA13.txt  Simulation - GA14.txt  Simulation - GA15.txt  Simulation - GA16.txt  Simulation - GA17.txt  Simulation - GA18.txt  Simulation - GA19.txt  Simulation - GA2.txt  Simulation - GA20.txt  Simulation - GA3.txt  Simulation - GA4.txt  Simulation - GA5.txt  Simulation - GA6.txt  Simulation - GA7.txt  Simulation - GA8.txt  Simulation - GA9.txt
BAX_GA_Solution/: GA Solution - GA1.txt  GA Solution - GA10.txt  GA Solution - GA11.txt  GA Solution - GA12.txt  GA Solution - GA13.txt  GA Solution - GA14.txt  GA Solution - GA15.txt  GA Solution - GA16.txt  GA Solution - GA17.txt  GA Solution - GA18.txt  GA Solution - GA19.txt  GA Solution - GA2.txt  GA Solution - GA20.txt  GA Solution - GA3.txt  GA Solution - GA4.txt  GA Solution - GA5.txt  GA Solution - GA6.txt  GA Solution - GA7.txt  GA Solution - GA8.txt  GA Solution - GA9.txt
BAX_Simulation/: Simulation - GA1.txt  Simulation - GA10.txt  Simulation - GA11.txt  Simulation - GA12.txt  Simulation - GA13.txt  Simulation - GA14.txt  Simulation - GA15.txt  Simulation - GA16.txt  Simulation - GA17.txt  Simulation - GA18.txt  Simulation - GA19.txt  Simulation - GA2.txt  Simulation - GA20.txt  Simulation - GA3.txt  Simulation - GA4.txt  Simulation - GA5.txt  Simulation - GA6.txt  Simulation - GA7.txt  Simulation - GA8.txt  Simulation - GA9.txt
Results/: 2PX_Results.txt  BAX_Results.txt  SX_Results.txt  UX_Results.txt
SX_GA_Solution/: GA Solution - GA1.txt  GA Solution - GA10.txt  GA Solution - GA11.txt  GA Solution - GA12.txt  GA Solution - GA13.txt  GA Solution - GA14.txt  GA Solution - GA15.txt  GA Solution - GA16.txt  GA Solution - GA17.txt  GA Solution - GA18.txt  GA Solution - GA19.txt  GA Solution - GA2.txt  GA Solution - GA20.txt  GA Solution - GA3.txt  GA Solution - GA4.txt  GA Solution - GA5.txt  GA Solution - GA6.txt  GA Solution - GA7.txt  GA Solution - GA8.txt  GA Solution - GA9.txt
SX_Simulation/: Simulation - GA1.txt  Simulation - GA10.txt  Simulation - GA11.txt  Simulation - GA12.txt  Simulation - GA13.txt  Simulation - GA14.txt  Simulation - GA15.txt  Simulation - GA16.txt  Simulation - GA17.txt  (+11 more)
(+54 files in other folders)
